--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
-    args: ['package']
+    args: ['package', '-Dspring.profiles.active=prod']
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
