--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,4 @@ spring.cloud.gcp.sql.database-name=kinolist
 spring.datasource.username=kinolist-user
 spring.datasource.password=12345678
 spring.cloud.gcp.bigquery.credentials.location=classpath:db.json
+spring.cloud.gcp.sql.enabled=true
