--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['package', '"-Dspring.profiles.active=prod"']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
+    args: ['app', 'deploy', '/target/kinolist-0.0.1-SNAPSHOT.jar']
