--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ flyway.url=jdbc:mysql://localhost:3306/mysql
 flyway.schemas=kinolist
 flyway.user=root
 flyway.password=12345678
+spring.cloud.gcp.sql.enabled=false
